--- a/.github/workflows/axionwidgets.yml
+++ b/.github/workflows/axionwidgets.yml
@@ -1,69 +1,111 @@
 name: AxionWidgets Compiler
 
 on:
-  workflow_dispatch:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+  workflow_dispatch: # Allows you to run this manually from the Actions tab
 
 jobs:
-  build:
+  build-apk:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout bkl branch
+      # 1. Clone the AxionWidgets repository (bkl branch)
+      - name: Checkout AxionWidgets (bkl)
         uses: actions/checkout@v4
         with:
           repository: CosmicCoreX/android_packages_apps_AxionWidgets
           ref: bkl
+          fetch-depth: 0
 
+      # 2. Set up Java Environment
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'zulu'
+          cache: 'gradle'
 
+      # 3. Setup Android SDK
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
 
+      # 4. Inject Gradle Configuration
+      # Since the repo uses Android.bp, we must provide these files for the bot
       - name: Inject Android Gradle Files
         run: |
-          # 1. Create a basic settings.gradle
+          # Create settings.gradle
           echo "rootProject.name = 'AxionWidgets'" > settings.gradle
 
-          # 2. Create a build.gradle tailored for a system app
+          # Create build.gradle (Pure Groovy syntax)
           cat <<EOF > build.gradle
           buildscript {
-              repositories { google(); mavenCentral() }
-              dependencies { classpath 'com.android.tools.build:gradle:8.2.2' }
+              repositories {
+                  google()
+                  mavenCentral()
+              }
+              dependencies {
+                  classpath 'com.android.tools.build:gradle:8.2.2'
+              }
           }
+
           apply plugin: 'com.android.application'
-          repositories { google(); mavenCentral() }
+
+          repositories {
+              google()
+              mavenCentral()
+          }
+
           android {
-              namespace "com.axion.widgets" # Adjust if the manifest uses a different package
+              namespace "com.axion.widgets"
               compileSdk 34
+
               defaultConfig {
                   applicationId "com.axion.widgets"
-                  minSdk 21
+                  minSdk 26
                   targetSdk 34
                   versionCode 1
                   versionName "1.0"
               }
+
               sourceSets {
                   main {
                       manifest.srcFile 'AndroidManifest.xml'
                       java.srcDirs = ['src']
                       res.srcDirs = ['res']
+                      resources.srcDirs = ['src']
                       aidl.srcDirs = ['src']
+                  }
+              }
+
+              lintOptions {
+                  abortOnError false
+                  checkReleaseBuilds false
+              }
+
+              buildTypes {
+                  release {
+                      minifyEnabled false
                   }
               }
           }
           EOF
 
+      # 5. Initialize the Wrapper
       - name: Generate Gradle Wrapper
-        run: gradle wrapper
+        run: gradle wrapper --gradle-version 8.5
 
-      - name: Build APK
-        run: ./gradlew assembleDebug
+      # 6. Build the APK
+      - name: Build Debug APK
+        run: |
+          chmod +x gradlew
+          ./gradlew assembleDebug
 
-      - name: Upload APK
+      # 7. Upload the resulting APK
+      - name: Upload AxionWidgets APK
         uses: actions/upload-artifact@v4
         with:
-          name: AxionWidgets-Debug
+          name: AxionWidgets-BKL-Build
           path: build/outputs/apk/debug/*.apk
