--- a/.github/workflows/axionwidgets.yml
+++ b/.github/workflows/axionwidgets.yml
@@ -1,67 +1,35 @@
 name: AxionWidgets Compiler
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-  workflow_dispatch: # Allows you to run this manually from the Actions tab
+  workflow_dispatch:
 
 jobs:
   build-apk:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Clone the AxionWidgets repository (bkl branch)
-      - name: Checkout AxionWidgets (bkl)
+      # 1. Clone the repo (Explicitly set path to current directory)
+      - name: Checkout AxionWidgets
         uses: actions/checkout@v4
         with:
           repository: CosmicCoreX/android_packages_apps_AxionWidgets
           ref: bkl
-          fetch-depth: 0
+          path: .
 
-      # 2. Set up Java Environment
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'zulu'
-          cache: 'gradle'
-
-      # 3. Setup Android SDK
-      - name: Setup Android SDK
-        uses: android-actions/setup-android@v3
-
-      # 4. Inject Gradle Configuration
-      # Since the repo uses Android.bp, we must provide these files for the bot
+      # 2. Inject Gradle Files FIRST (Fixes the "No file matched" error)
       - name: Inject Android Gradle Files
         run: |
-          # Create settings.gradle
           echo "rootProject.name = 'AxionWidgets'" > settings.gradle
-
-          # Create build.gradle (Pure Groovy syntax)
           cat <<EOF > build.gradle
           buildscript {
-              repositories {
-                  google()
-                  mavenCentral()
-              }
-              dependencies {
-                  classpath 'com.android.tools.build:gradle:8.2.2'
-              }
+              repositories { google(); mavenCentral() }
+              dependencies { classpath 'com.android.tools.build:gradle:8.2.2' }
           }
-
           apply plugin: 'com.android.application'
-
-          repositories {
-              google()
-              mavenCentral()
-          }
-
+          repositories { google(); mavenCentral() }
           android {
               namespace "com.axion.widgets"
               compileSdk 34
-
               defaultConfig {
                   applicationId "com.axion.widgets"
                   minSdk 26
@@ -69,29 +37,28 @@ jobs:
                   versionCode 1
                   versionName "1.0"
               }
-
               sourceSets {
                   main {
                       manifest.srcFile 'AndroidManifest.xml'
                       java.srcDirs = ['src']
                       res.srcDirs = ['res']
-                      resources.srcDirs = ['src']
-                      aidl.srcDirs = ['src']
                   }
               }
-
-              lintOptions {
-                  abortOnError false
-                  checkReleaseBuilds false
-              }
-
-              buildTypes {
-                  release {
-                      minifyEnabled false
-                  }
-              }
+              lintOptions { abortOnError false }
           }
           EOF
+
+      # 3. Set up Java (Cache disabled to prevent the error you saw)
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'zulu'
+          # cache: 'gradle' <-- Removed this to avoid the error
+
+      # 4. Setup Android SDK
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v3
 
       # 5. Initialize the Wrapper
       - name: Generate Gradle Wrapper
@@ -107,5 +74,5 @@ jobs:
       - name: Upload AxionWidgets APK
         uses: actions/upload-artifact@v4
         with:
-          name: AxionWidgets-BKL-Build
+          name: AxionWidgets-BKL
           path: build/outputs/apk/debug/*.apk
